# cggeomalg

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: bench_e2ga.rs  bench_e3ga.rs
src/: coordinates.rs  e2ga.rs  e3ga.rs  lib.rs  scalar.rs
tests/: test_e2ga.rs  test_e3ga.rs
