[package]
name = "cggeomalg"
version = "0.2.0"
edition = "2021"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "A low-dimensional geometric algebra library for real-time computer graphics."
categories = [
    "graphics",
    "mathematics",
    "game-development",
    "game-engines",
    "no_std"
]
keywords = [
    "graphics",
    "geometric-algebra",
    "multivector",
    "euclidean",
    "conformal"
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/cggeomalg"

[lib]
name = "cggeomalg"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = []

[dependencies.approx]
version = "0.5.1"
default-features = false

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = ["libm"]

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"
rand_isaac = "0.3.0"

[profile.release]
opt-level = 2

[profile.test]

[[bench]]
name = "bench_e2ga"
harness = false

[[bench]]
name = "bench_e3ga"
harness = false

