[package]
name = "cggeomalg"
version = "0.3.0"
edition = "2024"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "A low-dimensional geometric algebra library for real-time computer graphics."
categories = [
    "graphics",
    "mathematics",
    "game-development",
    "game-engines",
    "no_std"
]
keywords = [
    "graphics",
    "geometric-algebra",
    "multivector",
    "euclidean",
    "conformal"
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/cggeomalg"

[lib]
name = "cggeomalg"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
# Option: "core" is a platform-agnostic option that works in environments that cannot
# allocate memory. The environment needs to supply its own implementations of 
# `eh_personality`.
core = []
# Option: "alloc" enables support for environments that can allocate memory 
# but don't use the full standard library.
alloc = []
# Option: "std" enables support for environments that use the full standard library.
std = []


[dependencies.approx_cmp]
git = "https://github.com/lambdaxymox/approx_cmp/"
version = "2.0.0"
features = ["core"]

[dependencies.num-traits]
version = "0.2.19"
default-features = false
features = ["libm"]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"
rand_isaac = "0.4.0"

[profile.release]
opt-level = 2

[profile.test]

[[bench]]
name = "bench_e2ga"
harness = false

[[bench]]
name = "bench_e3ga"
harness = false

